templates/thruk_template.yaml
---
# Source: thruk/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thruk
  labels:
    app.kubernetes.io/name: thruk
    helm.sh/chart: thruk-1.0.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http-thruk
      port: 80
      targetPort: http-thruk
      nodePort: null
  selector:
    app.kubernetes.io/name: thruk
    app.kubernetes.io/instance: release-name
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 7200
---
# Source: thruk/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-thruk
  labels:
    app.kubernetes.io/name: thruk
    helm.sh/chart: thruk-1.0.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: thruk
  annotations:
    helm.sh/hook-weight: "0"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: thruk
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: thruk
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thruk
        helm.sh/chart: thruk-1.0.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: thruk
    spec:
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: thruk
                    app.kubernetes.io/instance: release-name
                namespaces:
                  - "default"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      imagePullSecrets:
      - name: ghcr-pull-secret
      containers:
        - name: http-thruk
          image: svtechnmaa/svtech_http_thruk:v1.0.2
          imagePullPolicy: "IfNotPresent"

          ports:
            - name: http-thruk
              containerPort: 80
---
# Source: thruk/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thruk-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: default
  rules:
  - http:
      paths:
      - path: /thruk
        pathType: Prefix
        backend:
          service:
            name: thruk
            port:
              number: 80
